--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,11 +18,11 @@
     "license": "ISC",
     "dependencies": {
         "@supabase/supabase-js": "^2.39.0",
-        "express": "^4.18.2",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "nodemon": "^3.1.11"
     }
 }
